# SchoolThings

./: .gitignore  Cargo.toml  README.md  favicon.gvdesign
migrations/2020-11-22-211058_create_users/: up.sql
migrations/2020-11-22-215150_add_pg_crypto/: down.sql  up.sql
migrations/2020-11-27-201215_create_sessions/: up.sql
migrations/2021-01-05-051543_create_apps/: up.sql
migrations/2021-01-24-190745_fix_duplicate_cases/: down.sql  up.sql
migrations/2021-01-25-130921_add_repos/: up.sql
src/: apps.rs  common.rs  crypt_eq.rs  db.rs  main.rs  models.rs  repos.rs  schema.rs  sessions.rs  users.rs
templates/: app.tera  apps.tera  base.tera  create_app.tera  create_repo.tera  home.tera  login.tera  nav.tera  repo.tera  repos.tera  signup.tera  sitemap.xml.tera  user_profile.tera
