[package]
name = "school_things"
version = "0.1.0"
authors = ["Clayton Hickey <clayton@claytondoesthings.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1.0"
diesel = "1.0.0"
percent-encoding = "2.1.0"
regex = "1.4.2"
rocket = "0.4.6"
serde = { version = "1.0.118", features = ["derive"] }
validator = "0.12.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]